--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="leftContainer">
+        <div class="logo"><img class="image" src="Images/odin-logo.png">ODIN</div>
+        <p class="cite">Photo by Dana Katharina on Unsplash</p>
+    </div>
+    <div class="rightContainer">
+        <div id="formHeader">
+            <p>This is not a real online service! You know you need something 
+                like this in your life to help you realize your deepest dreams.</p>
+            <p>Sign up <span class="italic">now</span> to get started</p>
+            </div>
+        <div id="formBody">
+            <p>Let's do this!</p>
+        </div>
+        <div id="formFooter">
+            <button>Create Account</button>
+            <p>Already have an account?<span class="bold">Log in</span></p>
+        </div>
+    </div>
+</body>
+</html>
