Used calc CSS to break up 3 sections. Realize right section is 1 div with box placed on top. Need to update. Used flex-box to separate left/right

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="leftContainer">
+    <div id="leftContainer">
         <div class="logo"><img class="image" src="Images/odin-logo.png">ODIN</div>
         <p class="cite">Photo by Dana Katharina on Unsplash</p>
     </div>
-    <div class="rightContainer">
+    <div id="rightContainer">
         <div id="formHeader">
             <p>This is not a real online service! You know you need something 
                 like this in your life to help you realize your deepest dreams.</p>
