--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <title>Sign-Up Form</title>
 </head>
 <body>
     <div id="leftContainer">
@@ -20,6 +21,38 @@
             </div>
         <div id="formBody">
             <p>Let's do this!</p>
+            <form action="example.com/path", method="get">
+                <div class="row1">
+                    <div>
+                        <label for "first_name">FIRST NAME</label>
+                        <input type="text" id="first_name" name="first_name">
+                    </div>
+                    <div>
+                        <label for "last_name">LAST NAME</label>
+                        <input type="text" id="last_name" name="last_name">
+                    </div>
+                </div>
+                <div class="row2">
+                    <div>
+                        <label for "user_email">EMAIL</label>
+                        <input type="email" id="user_email" name="email">
+                    </div>
+                    <div>
+                        <label for "phone_number">PHONE NUMBER</label>
+                        <input type="text" id="phone_number" name="phone_number">
+                    </div>
+                </div>
+                <div class="row3">
+                    <div>
+                        <label for "user_password">PASSWORD</label>
+                        <input type="password" id="user_password" name="password" required>
+                    </div>
+                    <div>
+                        <label for "confirm_password">CONFIRM PASSWORD</label>
+                        <input type="password" id="confirm_password" name="password" required>
+                    </div>
+                </div>
+            </form>
         </div>
         <div id="formFooter">
             <button>Create Account</button>
